Prevent jumps due to scrollbars being shown/hidden.

--- a/src/css/jquery.fullScreenOverlay.css
+++ b/src/css/jquery.fullScreenOverlay.css
@@ -13,11 +13,11 @@
 .full-screen-overlay-wrap div {
 	box-sizing: border-box;
 }
-.full-screen-overlay {
+.full-screen-overlay-no-fixed-header .full-screen-overlay {
 	height: 100%;
 	overflow-y: scroll;
 }
-.full-screen-overlay.no-scroll {
+.full-screen-overlay-wrap .full-screen-overlay.no-scroll {
 	overflow-y: hidden;
 }
 .full-screen-overlay-header-wrap {
@@ -35,9 +35,8 @@
 .full-screen-overlay-body-wrap {
 	width: 100%;
 	height: auto;
-	min-height: 100%;
     position: absolute;
-    overflow-y: hidden;
+    overflow-y: scroll;
     bottom: 0;
     background-color: #fff;
     padding-top: 25px;
@@ -49,6 +48,8 @@
 	position: relative;
 	bottom: initial;
 	overflow-y: hidden;
+	height: auto;
+	min-height: 100%;
 }
 .full-screen-overlay-fixed-header .full-screen-overlay-body-wrap {
 	top: 130px;
